# parco-homework-D2

./: .gitignore  CMakeLists.txt  IPC_homework.pbs  README.md
inc/: matrix_operations.h  test.h  utils.h
src/: main.c  matrix_operations.c  performance_analysis.ipynb  test.c  utils.c
